fix text align of paragraph

--- a/public/themes/geedit.css
+++ b/public/themes/geedit.css
@@ -72,7 +72,6 @@ p {
 	font-size: 15px;
 	margin-bottom: 15px;
 	margin-top: 15px;
-	text-align:justify
 }
 
 h1,
